Этап 1: Полная интеграция с Bybit API

--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
-BYBIT_API_KEY=your_api_key_here
-BYBIT_API_SECRET=your_api_secret_here
+# Bybit API Keys
+# Получите ключи на: https://www.bybit.com/app/user/api-management
+BYBIT_API_KEY=ClETq3mxP9YB0Wd1B9
+BYBIT_API_SECRET=Ge6acdo3dqcT4yEb6e1lKv7pj3qL6uGQA3RP
+
+# Настройки приложения
+DATA_DIR=./data
+LOG_LEVEL=INFO
+
+# Настройки API
+REQUEST_TIMEOUT=30
+MAX_RETRIES=3
+RATE_LIMIT_DELAY=0.2
